# ContactBookFastAPI

./: .env.example  README.md  main.py  pyproject.toml  test.db
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 017834ffa8e6_add_table_users.py  c938f350baff_init.py  d0d7e55819f4_add_verify.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py
